fixed text align experience

--- a/src/Component/Experience/Experience.css
+++ b/src/Component/Experience/Experience.css
@@ -15,6 +15,7 @@
     flex-direction: column;
     align-items: center;
     border-radius: 2rem;
+    text-align: center;
 }
 
 .experience_logo {
